[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/GameClock.gd" type="Script" id=1]
[ext_resource path="res://Scripts/CalendarPages.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/DateBox/Panel.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "PageRip"
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../DayCounterLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../DayCounterLabel:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "update_day_counter"
} ]
}

[node name="GameClock" type="TextureRect"]
margin_left = 1.0
margin_top = -8.0
margin_right = 49.0
margin_bottom = 40.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
colors_per_month = [ Color( 1, 0, 0, 1 ), Color( 1, 0.376471, 0, 1 ), Color( 1, 0.772549, 0, 1 ), Color( 0.780392, 1, 0, 1 ), Color( 0.360784, 1, 0, 1 ), Color( 0, 1, 0.345098, 1 ), Color( 0, 1, 0.811765, 1 ), Color( 0, 0.552941, 1, 1 ), Color( 0.0784314, 0, 1, 1 ), Color( 0.568627, 0, 1, 1 ), Color( 0.968627, 0, 1, 1 ), Color( 1, 0, 0.447059, 1 ) ]

[node name="ColorRectCurrentMonth" type="ColorRect" parent="."]
margin_left = 2.0
margin_top = 11.0
margin_right = 18.0
margin_bottom = 18.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectNextMonth" type="ColorRect" parent="."]
visible = false
margin_left = 2.0
margin_top = 2.0
margin_right = 18.0
margin_bottom = 9.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectCurrentMonth3" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.486275 )
margin_left = 2.0
margin_top = 11.0
margin_right = 4.0
margin_bottom = 18.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectCurrentMonth4" type="ColorRect" parent="."]
margin_left = 1.05568
margin_top = 11.0
margin_right = 2.05568
margin_bottom = 18.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectCurrentMonth5" type="ColorRect" parent="."]
margin_left = 2.0
margin_top = 10.0
margin_right = 18.0
margin_bottom = 11.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectCurrentMonth6" type="ColorRect" parent="."]
margin_left = 18.0
margin_top = 11.0
margin_right = 19.0
margin_bottom = 18.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MonthCounterLabel" type="Label" parent="."]
margin_left = 4.0
margin_top = 10.0
margin_right = 20.0
margin_bottom = 19.0
rect_min_size = Vector2( 16, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.501961 )
custom_constants/shadow_offset_x = -1
custom_constants/shadow_offset_y = 0
text = "jan"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageSprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false
hframes = 14
frame = 13
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="PageSprite"]
anims/PageRip = SubResource( 1 )

[node name="DayCounterLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -3.5
margin_right = -8.0
margin_bottom = 5.5
rect_min_size = Vector2( 8, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.52549, 0.52549, 0.52549, 1 )
custom_constants/shadow_offset_x = -1
custom_constants/shadow_offset_y = 0
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
